cmake_minimum_required(VERSION 3.20)
project(linked_list LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(APPLE AND EXISTS "/opt/homebrew")
    list(PREPEND CMAKE_PREFIX_PATH "/opt/homebrew")
endif()

option(ENABLE_TESTS "Build unit tests" ON)
option(ENABLE_APP "Build app (production CLI)" ON)
option(ENABLE_DEV_MAIN "Build dev_main executable (experiments)" ON)

add_library(core_lib STATIC
        src/core_lib.cpp
        src/node.cpp
        src/api.cpp
        src/remove_duplicates_from_sorted_list.cpp
        src/remove_duplicates_unsorted.cpp
        src/middle_node.cpp
        src/insert_node.cpp
        src/is_palindrome.cpp
        src/reverse_linked_list.cpp
        src/remove_kth_node.cpp
        src/add_two_numbers.cpp
        src/linked_list_frequency.cpp
        src/remove_element.cpp
        src/merging_linked_list.cpp
        src/merge_sorted_lists.cpp
        src/has_cycle.cpp
        src/find_cycle_origin.cpp

        # add more .cpp here as project grows
)

target_include_directories(core_lib PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/header
)

file(GLOB_RECURSE CORE_HEADERS CONFIGURE_DEPENDS
        "${CMAKE_CURRENT_SOURCE_DIR}/header/*.hpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/header/*.h"
)
target_sources(core_lib PRIVATE ${CORE_HEADERS})

# --- Production CLI app ---
if(ENABLE_APP AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/app/main.cpp")
    add_executable(app app/main.cpp)
    target_link_libraries(app PRIVATE core_lib)
endif()

# --- Dev / scratch main ---
if(ENABLE_DEV_MAIN AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/app/dev_main.cpp")
    add_executable(dev_main app/dev_main.cpp)
    target_link_libraries(dev_main PRIVATE core_lib)
    target_compile_definitions(dev_main PRIVATE DEV_MAIN_BUILD=1)
endif()

# --- Unit tests ---
if(ENABLE_TESTS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/unit_tests/CMakeLists.txt")
    enable_testing()
    add_subdirectory(unit_tests)
endif()